--- a/assets/theme.css
+++ b/assets/theme.css
@@ -26247,7 +26247,7 @@ predictive-search[loading] .predictive-search__loader {
   top: 102%;
   right: 0;
   left: 0;
-  width: calc(100% + 20px);
+  width: 100%;
   height: 100vh;
   opacity: 0;
   visibility: hidden;
